# virtual-persona-daily

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: VENDOR.md  settings.json  task.env.example
.claude/hooks/: check-completion.sh  path-guard.sh
.github/: CODEOWNERS  SETUP.md  pull_request_template.md
.github/rulesets/: README.md  main-protection.json
.github/workflows/: agent-review.yml.example  ci.yml
apps/admin/: AGENTS.md  CLAUDE.md  README.md
apps/web/: .env.example  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
context/: README.md  domain-glossary.md  product-overview.md
feature/: README.md
feature/2026-06-10-virtual-persona/: f4-review.md  requirement.md  (+2 more)
rules/: README.md  development-guard.md  forbidden.md  high-impact.md  high-impact.paths  review-gates.md
servers/ai-gateway/: .env.example  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
servers/ai-gateway/app/: deepseek.py  errors.py  guardrail.py  main.py  mapping.py  models.py  service.py
servers/ai-gateway/contracts/: gen-aigw.openapi.yaml
servers/ai-gateway/plan/: 2026-06-10-plan-aigw-a1.md  README.md
servers/ai-gateway/review/: 2026-06-10-review-aigw-a1.md  README.md
servers/ai-gateway/rules/: README.md  development-guard.md  forbidden.md  high-impact.md  scope.md
servers/ai-gateway/spec/: 2026-06-10-spec-aigw-a1.md  README.md
servers/ai-gateway/tests/: test_complete.py  test_deepseek.py  test_guardrail.py  test_mapping.py  test_models.py
(+71 files in other folders)
